--- a/index.html
+++ b/index.html
@@ -65,26 +65,26 @@
             </pre>
             </li> 
 			<li>
-				Training Multi-Layer Over-Parametrized Neural Network in Subquadratic Time (<a href = "https://arxiv.org/abs/2112.07628">arxiv link</a>).
+                Training Multi-Layer Over-Parametrized Neural Network in Subquadratic Time (<a href = "https://arxiv.org/abs/2112.07628">arxiv link</a>, <a href = "https://www.youtube.com/watch?v=4yC9KW4d36Y&list=PLJifK6WMakmvx-5hXKYI3eUDHqiJ7FafC&index=4">long talk</a>).
 				<br> Zhao Song, <i>Lichen Zhang</i> and Ruizhe Zhang.
                 <br> ITCS, 2024.
 				</pre>
 			</li>
             <li>
-                Convex Minimization with Integer Minima in ~O(n^4) Time (<a href = "https://arxiv.org/abs/2304.03426">arxiv link</a>).
+                Convex Minimization with Integer Minima in ~O(n^4) Time (<a href = "https://arxiv.org/abs/2304.03426">arxiv link</a>, <a href = "https://www.youtube.com/watch?v=zJrwFD5Vb94&list=PLJifK6WMakmvx-5hXKYI3eUDHqiJ7FafC&index=15">long talk</a>).
             <br> Haotian Jiang, Yin Tat Lee, Zhao Song and <i>Lichen Zhang</i>.
             <br> SODA, 2024.
             </pre>
             </li>
             <li>
-                Sketching Meets Differential Privacy: Fast Algorithm for Dynamic Kronecker Projection Maintenance (<a href = "https://arxiv.org/abs/2210.11542">arxiv link</a>).
+                Sketching Meets Differential Privacy: Fast Algorithm for Dynamic Kronecker Projection Maintenance (<a href = "https://arxiv.org/abs/2210.11542">arxiv link</a>, <a href = "https://www.youtube.com/watch?v=Ja9fGt4qYlI&list=PLJifK6WMakmvx-5hXKYI3eUDHqiJ7FafC&index=7">short talk</a>).
             <br> Zhao Song, Xin Yang, Yuanyuan Yang and <i>Lichen Zhang</i>.
             <br> ICML, 2023.
             </pre>
             </li>
             <li>
                 Sketching for First Order Method: Efficient Algorithm for Low-Bandwidth
-                Channel and Vulnerability (<a href = "https://arxiv.org/abs/2210.08371">arxiv link</a>).
+                Channel and Vulnerability (<a href = "https://arxiv.org/abs/2210.08371">arxiv link</a>, <a href = "https://www.youtube.com/watch?v=6V7rCD8JaBA&list=PLJifK6WMakmvx-5hXKYI3eUDHqiJ7FafC&index=5">short talk</a>).
                 <br> Zhao Song, Yitan Wang, Zheng Yu and <i>Lichen Zhang</i>.
                 <br> ICML, 2023.
                 </pre>
@@ -96,7 +96,7 @@
                 </pre>
             </li>
             <li>
-            Space-Efficient Interior Point Method, with applications to Linear Programming and Maximum Weight Bipartite Matching (<a href = "https://arxiv.org/abs/2009.06106">arxiv link</a>).
+                Space-Efficient Interior Point Method, with applications to Linear Programming and Maximum Weight Bipartite Matching (<a href = "https://arxiv.org/abs/2009.06106">arxiv link</a>, <a href = "https://www.youtube.com/watch?v=_qKjko7wwrQ&list=PLJifK6WMakmvx-5hXKYI3eUDHqiJ7FafC&index=8">short talk by Tianyi</a>).
         <br> S. Cliff Liu, Zhao Song, Hengjie Zhang, <i>Lichen Zhang</i> and Tianyi Zhou.
         <br> ICALP, 2023.
         </pre>
