--- a/index.html
+++ b/index.html
@@ -49,20 +49,32 @@
         <!--    <li>
                 Accelerating Frank-Wolfe Algorithm using Low-Dimensional and Adaptive Data Structures (<a href = "https://arxiv.org/abs/2207.09002">arxiv link</a>).
                 <br> Zhao Song, Zhaozhuo Xu, Yuanyuan Yang and <i>Lichen Zhang</i>.
-                <br> AISTATS, 2024.
+                <br> ICML, 2024.
                 </pre>
             </li> -->
         <!--    <li>
                 Efficient Alternating Minimization with Applications to Weighted Low Rank Approximation (<a href = "https://arxiv.org/abs/2306.04169">arxiv link</a>).
                 <br> Zhao Song, Mingquan Ye, Junze Yin and <i>Lichen Zhang</i>.
-                <br> AISTATS, 2024.
+                <br> ICML, 2024.
                 </pre>
         </li> -->
             <li>
+                Solving Attention Kernel Regression Problem via Pre-conditioner.
+                <br> Zhao Song, Junze Yin and <i>Lichen Zhang</i>.
+                <br> AISTATS, 2024.
+                </pre>
+            </li>
+            <li>
+                Fast Dynamic Sampling for Determinantal Point Processes.
+                <br> Zhao Song, Junze Yin, <i>Lichen Zhang</i> and Ruizhe Zhang.
+                <br> AISTATS, 2024.
+                </pre>
+            </li>
+            <li>
                 Low Rank Matrix Completion via Robust Alternating Minimization in Nearly Linear Time (<a href = "https://arxiv.org/abs/2302.11068">arxiv link</a>, <a href = "https://www.youtube.com/watch?v=H7APrjS9r-0&list=PLJifK6WMakmvx-5hXKYI3eUDHqiJ7FafC&index=6">short talk by Junze</a>).
-            <br> Yuzhou Gu, Zhao Song, Junze Yin and <i>Lichen Zhang</i>.
-            <br> ICLR, 2024.
-            </pre>
+                <br> Yuzhou Gu, Zhao Song, Junze Yin and <i>Lichen Zhang</i>.
+                <br> ICLR, 2024.
+                </pre>
             </li> 
 			<li>
                 Training Multi-Layer Over-Parametrized Neural Network in Subquadratic Time (<a href = "https://arxiv.org/abs/2112.07628">arxiv link</a>, <a href = "https://www.youtube.com/watch?v=4yC9KW4d36Y&list=PLJifK6WMakmvx-5hXKYI3eUDHqiJ7FafC&index=4">long talk</a>).
