--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title> Lichen Zhang's homepage </title>
+		<title> Lichen Zhang's Homepage </title>
         <style>
         .container {
             display: flex;
@@ -21,7 +21,7 @@
         </style>
 	</head>
 	<body>
-		<h1> Lichen Zhang's homepage </h1>
+		<h1> Lichen Zhang's Homepage </h1>
         <div class="container">
         <div class="bio">
             <h2> Short Bio </h2>
@@ -71,7 +71,7 @@
                 </pre>
             </li>
             <li>
-                Low Rank Matrix Completion via Robust Alternating Minimization in Nearly Linear Time (<a href = "https://arxiv.org/abs/2302.11068">arxiv link</a>, <a href = "https://www.youtube.com/watch?v=H7APrjS9r-0&list=PLJifK6WMakmvx-5hXKYI3eUDHqiJ7FafC&index=6">short talk by Junze</a>).
+                Low Rank Matrix Completion via Robust Alternating Minimization in Nearly Linear Time (<a href = "https://arxiv.org/abs/2302.11068">arxiv link</a>).
                 <br> Yuzhou Gu, Zhao Song, Junze Yin and <i>Lichen Zhang</i>.
                 <br> ICLR, 2024.
                 </pre>
@@ -108,7 +108,7 @@
                 </pre>
             </li>
             <li>
-                Space-Efficient Interior Point Method, with applications to Linear Programming and Maximum Weight Bipartite Matching (<a href = "https://arxiv.org/abs/2009.06106">arxiv link</a>, <a href = "https://www.youtube.com/watch?v=_qKjko7wwrQ&list=PLJifK6WMakmvx-5hXKYI3eUDHqiJ7FafC&index=8">short talk by Tianyi</a>).
+                Space-Efficient Interior Point Method, with applications to Linear Programming and Maximum Weight Bipartite Matching (<a href = "https://arxiv.org/abs/2009.06106">arxiv link</a>).
         <br> S. Cliff Liu, Zhao Song, Hengjie Zhang, <i>Lichen Zhang</i> and Tianyi Zhou.
         <br> ICALP, 2023.
         </pre>
