--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 			<li> <a href = "CV.pdf"> CV </a> </li>
             <li> <a href = "https://scholar.google.com/citations?view_op=list_works&hl=en&hl=en&user=oJgdHKEAAAAJ"> Google Scholar </a> </li>
             <li> <a href = "https://dblp.org/pid/00/6357-3.html"> DBLP </a> </li>
-			<li> Email: lichenz AT mit DOT edu </a> </li>
+			<li> Email: lichenz AT mit DOT edu, lichenz AT csail DOT mit DOT edu </a> </li>
 		</ul>
 		</nav>
 		<!-- <div class = "container">
