--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 </pre>
         </li> -->
             <li>
-                Solving Attention Kernel Regression Problem via Pre-conditioner.
+                Solving Attention Kernel Regression Problem via Pre-conditioner (<a href = "https://arxiv.org/abs/2308.14304">arxiv link</a>).
                 <br> Zhao Song, Junze Yin and <i>Lichen Zhang</i>.
                 <br> AISTATS, 2024.
                 </pre>
