--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 </pre>
             </li>
             <li>
-                Fast Dynamic Sampling for Determinantal Point Processes.
+                Fast Dynamic Sampling for Determinantal Point Processes (<a href = "https://proceedings.mlr.press/v238/song24b.html">link</a>).
                 <br> Zhao Song, Junze Yin, <i>Lichen Zhang</i> and Ruizhe Zhang.
                 <br> AISTATS, 2024.
                 </pre>
