--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
 		<h2> Publications (Author names in alphabetical order) </h2>
 		<ul>
         <!--    <li>
-                Accelerating Frank-Wolfe Algorithm using Low-Dimensional and Adaptive Data Structures (<a href = "https://arxiv.org/abs/2207.09002">arxiv link</a>).
-                <br> Zhao Song, Zhaozhuo Xu, Yuanyuan Yang and <i>Lichen Zhang</i>.
+                Accelerating Iterative Algorithms using Low-Dimensional and Adaptive Data Structures (<a href = "https://arxiv.org/abs/2207.09002">arxiv link</a>).
+                <br> Zhao Song, Zhaozhuo Xu and <i>Lichen Zhang</i>.
                 <br> NeurIPS, 2024.
                 </pre>
             </li> -->
@@ -57,6 +57,21 @@
                 <br> Zhao Song, Mingquan Ye, Junze Yin and <i>Lichen Zhang</i>.
                 <br> NeurIPS, 2024.
                 </pre>
+        </li> -->
+        <!--    <li>
+                Log-concave Sampling from a Convex Body with a Barrier: a Robust and Unified Dikin Walk.
+                <br> Yuzhou Gu, Nikki Kuang, Yian Ma, Zhao Song and <i>Lichen Zhang</i>.
+                <br> NeurIPS, 2024.
+            </li> -->
+        <!-- <li>
+                Streaming Semidefinite Programs: O(\sqrt{n}) Passes, Small Space and Fast Runtime.
+                <br> Zhao Song, Mingquan Ye and <i>Lichen Zhang</i>.
+                <br> NeurIPS, 2024.
+        </li> -->
+        <!-- <li>
+                Faster Algorithms for Structured Linear and Kernel Support Vector Machines.
+                <br> Yuzhou Gu, Zhao Song and <i>Lichen Zhang</i>. 
+                <br> NeurIPS, 2024.
         </li> -->
             <li>
                 Solving Attention Kernel Regression Problem via Pre-conditioner (<a href = "https://arxiv.org/abs/2308.14304">arxiv link</a>).
