--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 		<h2> Master Thesis </h2>
 		<ul>
 			<li>
-				<a href = "http://reports-archive.adm.cs.cmu.edu/anon/anon/2022/CMU-CS-22-107.pdf">  Master Thesis </a> </li>
+				Speeding Up Optimizations via Data Structures: Faster Search, Sample and Maintenance (<a href = "http://reports-archive.adm.cs.cmu.edu/anon/anon/2022/CMU-CS-22-107.pdf">link </a>). 
 			</li>
 		</ul>
 	</body>
