--- a/index.html
+++ b/index.html
@@ -58,11 +58,6 @@
                 <br> NeurIPS, 2024.
                 </pre>
         </li> -->
-        <!--    <li>
-                Log-concave Sampling from a Convex Body with a Barrier: a Robust and Unified Dikin Walk.
-                <br> Yuzhou Gu, Nikki Kuang, Yian Ma, Zhao Song and <i>Lichen Zhang</i>.
-                <br> NeurIPS, 2024.
-            </li> -->
         <!-- <li>
                 Streaming Semidefinite Programs: O(\sqrt{n}) Passes, Small Space and Fast Runtime.
                 <br> Zhao Song, Mingquan Ye and <i>Lichen Zhang</i>.
@@ -73,6 +68,11 @@
                 <br> Yuzhou Gu, Zhao Song and <i>Lichen Zhang</i>. 
                 <br> NeurIPS, 2024.
         </li> -->
+            <li>
+                Log-concave Sampling from a Convex Body with a Barrier: a Robust and Unified Dikin Walk (To appear).
+                <br> Yuzhou Gu, Nikki Kuang, Yi-An Ma, Zhao Song and <i>Lichen Zhang</i>.
+                <br> NeurIPS, 2024.
+            </li> 
             <li>
                 Solving Attention Kernel Regression Problem via Pre-conditioner (<a href = "https://arxiv.org/abs/2308.14304">arxiv link</a>).
                 <br> Zhao Song, Junze Yin and <i>Lichen Zhang</i>.
@@ -169,7 +169,7 @@
 		<h2> Master Thesis </h2>
 		<ul>
 			<li>
-				Speeding Up Optimizations via Data Structures: Faster Search, Sample and Maintenance (<a href = "http://reports-archive.adm.cs.cmu.edu/anon/anon/2022/CMU-CS-22-107.pdf">link </a>). 
+				Speeding Up Optimizations via Data Structures: Faster Search, Sample and Maintenance (<a href = "http://reports-archive.adm.cs.cmu.edu/anon/anon/2022/CMU-CS-22-107.pdf">link</a>). 
 			</li>
 		</ul>
 	</body>
