--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
                 <br> NeurIPS, 2024.
         </li> -->
             <li>
-                Log-concave Sampling from a Convex Body with a Barrier: a Robust and Unified Dikin Walk (To appear).
-                <br> Yuzhou Gu, Nikki Kuang, Yi-An Ma, Zhao Song and <i>Lichen Zhang</i>.
+                Log-concave Sampling from a Convex Body with a Barrier: a Robust and Unified Dikin Walk (to appear).
+                <br> Yuzhou Gu, Nikki Lijing Kuang, Yi-An Ma, Zhao Song and <i>Lichen Zhang</i>.
                 <br> NeurIPS, 2024.
             </li> 
             <li>
