--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 <br> NeurIPS, 2024.
         </li> -->
             <li>
-                Log-concave Sampling from a Convex Body with a Barrier: a Robust and Unified Dikin Walk (to appear).
+                Log-concave Sampling from a Convex Body with a Barrier: a Robust and Unified Dikin Walk (<a href = "https://arxiv.org/abs/2410.05700">arxiv link</a>).
                 <br> Yuzhou Gu, Nikki Lijing Kuang, Yi-An Ma, Zhao Song and <i>Lichen Zhang</i>.
                 <br> NeurIPS, 2024.
             </li> 
