--- a/index.html
+++ b/index.html
@@ -47,27 +47,27 @@
 		<h2> Publications (Author names in alphabetical order) </h2>
 		<ul>
         <!--    <li>
-                Accelerating Iterative Algorithms using Low-Dimensional and Adaptive Data Structures (<a href = "https://arxiv.org/abs/2207.09002">arxiv link</a>).
+                Accelerating Frank-Wolfe Algorithm using Low-Dimensional and Adaptive Data Structures (<a href = "https://arxiv.org/abs/2207.09002">arxiv link</a>).
                 <br> Zhao Song, Zhaozhuo Xu and <i>Lichen Zhang</i>.
-                <br> NeurIPS, 2024.
+                <br> AISTATS, 2025.
                 </pre>
             </li> -->
-        <!--    <li>
+            <li>
                 Efficient Alternating Minimization with Applications to Weighted Low Rank Approximation (<a href = "https://arxiv.org/abs/2306.04169">arxiv link</a>).
                 <br> Zhao Song, Mingquan Ye, Junze Yin and <i>Lichen Zhang</i>.
-                <br> NeurIPS, 2024.
+                <br> ICLR, 2025.
                 </pre>
-        </li> -->
+        </li> 
         <!-- <li>
                 Streaming Semidefinite Programs: O(\sqrt{n}) Passes, Small Space and Fast Runtime.
                 <br> Zhao Song, Mingquan Ye and <i>Lichen Zhang</i>.
-                <br> NeurIPS, 2024.
+                <br> , 2025.
         </li> -->
-        <!-- <li>
-                Faster Algorithms for Structured Linear and Kernel Support Vector Machines.
+         <li>
+                Faster Algorithms for Structured Linear and Kernel Support Vector Machines (<a href = "https://arxiv.org/abs/2307.07735">arxiv link</a>).
                 <br> Yuzhou Gu, Zhao Song and <i>Lichen Zhang</i>. 
-                <br> NeurIPS, 2024.
-        </li> -->
+                <br> ICLR, 2025.
+        </li> 
             <li>
                 Log-concave Sampling from a Convex Body with a Barrier: a Robust and Unified Dikin Walk (<a href = "https://arxiv.org/abs/2410.05700">arxiv link</a>).
                 <br> Yuzhou Gu, Nikki Lijing Kuang, Yi-An Ma, Zhao Song and <i>Lichen Zhang</i>.
