--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="container">
         <div class="bio">
             <h2> Short Bio </h2>
-            <p> I'm a 3rd-year Ph.D candidate at <a href = "https://math.mit.edu/">  MIT Mathematics</a> and I'm very fortunate to be advised by Professor <a href = "https://math.mit.edu/~kelner/"> Jon Kelner</a>. I obtained my Bachelor and Master in Computer Science at <a href = "https://www.cmu.edu/"> Carnegie Mellon University</a>, advised by Professor <a href = "http://www.cs.cmu.edu/~glmiller/"> Gary Miller</a>.  
+            <p> I'm a 3rd-year Ph.D candidate at <a href = "https://math.mit.edu/">  MIT Mathematics</a> and I'm very fortunate to be advised by Professor <a href = "https://math.mit.edu/~kelner/"> Jonathan Kelner</a>. I obtained my Bachelor and Master in Computer Science at <a href = "https://www.cmu.edu/"> Carnegie Mellon University</a>, advised by Professor <a href = "http://www.cs.cmu.edu/~glmiller/"> Gary Miller</a>.  
 
         My research interests lie at the intersection of theoretical computer science and machine learning, with a specific focus on developing efficient algorithms. I'm particularly excited about problems in optimization, sketching, and differential privacy. Additionally, I am dedicated to enhancing the efficiency of training processes in large-scale machine learning systems.</p>       
         </div>
@@ -46,28 +46,28 @@
 		<div class = "blurb"> -->
 		<h2> Publications (Author names in alphabetical order) </h2>
 		<ul>
-        <!--    <li>
-                Accelerating Frank-Wolfe Algorithm using Low-Dimensional and Adaptive Data Structures (<a href = "https://arxiv.org/abs/2207.09002">arxiv link</a>).
-                <br> Zhao Song, Zhaozhuo Xu and <i>Lichen Zhang</i>.
-                <br> AISTATS, 2025.
+        <!-- <li> 
+                On Differential Privacy for Adaptively Solving Search Problems via Sketching (To appear). 
+                <br> Shiyuan Feng, Ying Feng, George Li, Zhao Song, David P. Woodruff and <i>Lichen Zhang</i>.
+                <br> ICML, 2025.
                 </pre>
-            </li> -->
+            </li> --!>
             <li>
                 Efficient Alternating Minimization with Applications to Weighted Low Rank Approximation (<a href = "https://arxiv.org/abs/2306.04169">arxiv link</a>).
                 <br> Zhao Song, Mingquan Ye, Junze Yin and <i>Lichen Zhang</i>.
                 <br> ICLR, 2025.
                 </pre>
-        </li> 
+            </li> 
         <!-- <li>
                 Streaming Semidefinite Programs: O(\sqrt{n}) Passes, Small Space and Fast Runtime.
                 <br> Zhao Song, Mingquan Ye and <i>Lichen Zhang</i>.
                 <br> , 2025.
-        </li> -->
-         <li>
+            </li> -->
+            <li>
                 Faster Algorithms for Structured Linear and Kernel Support Vector Machines (<a href = "https://arxiv.org/abs/2307.07735">arxiv link</a>).
                 <br> Yuzhou Gu, Zhao Song and <i>Lichen Zhang</i>. 
                 <br> ICLR, 2025.
-        </li> 
+            </li> 
             <li>
                 Log-concave Sampling from a Convex Body with a Barrier: a Robust and Unified Dikin Walk (<a href = "https://arxiv.org/abs/2410.05700">arxiv link</a>).
                 <br> Yuzhou Gu, Nikki Lijing Kuang, Yi-An Ma, Zhao Song and <i>Lichen Zhang</i>.
