--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
             </li>
         -->
         <li> 
-            On Differential Privacy for Adaptively Solving Search Problems via Sketching (To appear). 
+            On Differential Privacy for Adaptively Solving Search Problems via Sketching (<a href = "https://arxiv.org/abs/2506.05503">arxiv link</a>). 
             <br> Shiyuan Feng, Ying Feng, George Z. Li, Zhao Song, David P. Woodruff and <i>Lichen Zhang</i>.
-            <br> ICML, 2025.
+            <br> ICML, 2025. <b>Selected for Oral Presentation</b>.
             </pre>
         </li>
             <li>
