--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <li> 
             On Differential Privacy for Adaptively Solving Search Problems via Sketching (<a href = "https://arxiv.org/abs/2506.05503">arxiv link</a>). 
             <br> Shiyuan Feng, Ying Feng, George Z. Li, Zhao Song, David P. Woodruff and <i>Lichen Zhang</i>.
-            <br> ICML, 2025. <b>Selected for Oral Presentation</b>.
+            <br> ICML, 2025. <b>Selected for Oral Presentation (top 1% of submissions)</b>.
             </pre>
         </li>
             <li>
