--- a/index.html
+++ b/index.html
@@ -53,6 +53,11 @@
                 </pre>
             </li>
         -->
+        <!-- <li>
+                Streaming Semidefinite Programs: O(\sqrt{n}) Passes, Small Space and Fast Runtime.
+                <br> Zhao Song, Mingquan Ye and <i>Lichen Zhang</i>.
+                <br> NeurIPS, 2025.
+            </li> -->
         <li> 
             On Differential Privacy for Adaptively Solving Search Problems via Sketching (<a href = "https://arxiv.org/abs/2506.05503">arxiv link</a>). 
             <br> Shiyuan Feng, Ying Feng, George Z. Li, Zhao Song, David P. Woodruff and <i>Lichen Zhang</i>.
@@ -65,11 +70,6 @@
                 <br> ICLR, 2025.
                 </pre>
             </li> 
-        <!-- <li>
-                Streaming Semidefinite Programs: O(\sqrt{n}) Passes, Small Space and Fast Runtime.
-                <br> Zhao Song, Mingquan Ye and <i>Lichen Zhang</i>.
-                <br> , 2025.
-            </li> -->
             <li>
                 Faster Algorithms for Structured Linear and Kernel Support Vector Machines (<a href = "https://arxiv.org/abs/2307.07735">arxiv link</a>).
                 <br> Yuzhou Gu, Zhao Song and <i>Lichen Zhang</i>. 
@@ -124,7 +124,7 @@
                 </pre>
             </li> 
             <li>
-                A Nearly-Optimal Bound for Fast Regression with \ell_\infty Guarantee.
+                A Nearly-Optimal Bound for Fast Regression with \ell_\infty Guarantee (<a href = "https://arxiv.org/abs/2302.00248">arxiv link</a>).
                 <br> Zhao Song, Mingquan Ye, Junze Yin and <i>Lichen Zhang</i>.
                 <br> ICML, 2023.
                 </pre>
