--- a/index.html
+++ b/index.html
@@ -54,8 +54,15 @@
             </li>
         -->
         <!-- <li>
-                Streaming Semidefinite Programs: O(\sqrt{n}) Passes, Small Space and Fast Runtime.
-                <br> Zhao Song, Mingquan Ye and <i>Lichen Zhang</i>.
+                Differential Privacy for Euclidean Jordan Algebra with Applications to Private Symmetric Cone Programming (To appear).
+                <br> Zhao Song, Jianfei Xue and <i>Lichen Zhang</i>.
+                <br> NeurIPS, 2025.
+                </pre>
+            </li>
+        -->
+        <!-- <li>
+                Streaming Semidefinite Programs: O(\sqrt{n}) Passes, Small Space and Fast Runtime (To appear).
+                <br> Xiaoyu Li, Zhao Song and <i>Lichen Zhang</i>.
                 <br> NeurIPS, 2025.
             </li> -->
         <li> 
