--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <h2> Short Bio </h2>
             <p> I'm a 3rd-year Ph.D candidate at <a href = "https://math.mit.edu/">  MIT Mathematics</a> and I'm very fortunate to be advised by Professor <a href = "https://math.mit.edu/~kelner/"> Jonathan Kelner</a>. I obtained my Bachelor and Master in Computer Science at <a href = "https://www.cmu.edu/"> Carnegie Mellon University</a>, advised by Professor <a href = "http://www.cs.cmu.edu/~glmiller/"> Gary Miller</a>.  
 
-        My research interests lie at the intersection of theoretical computer science and machine learning, with a specific focus on developing efficient algorithms. I'm particularly excited about problems in optimization, sketching, differential privacy and quantum computing. Recently, I've been working on theoretical and practical approaches to improve the efficiency of large language models (LLM).</p>       
+        My research interests lie at the intersection of theoretical computer science and machine learning, with a specific focus on developing efficient algorithms. I'm particularly excited about problems in optimization, sketching, differential privacy and quantum computing. Recently, I've been working on theoretical and practical approaches to improve the efficiency of large language models (LLM). I'm supported by a Simons Dissertation Fellowship in Mathematics (2025 - 2027).</p>       
         </div>
         <div class="image">
             <img src="lichen.jpg">
