--- a/index.html
+++ b/index.html
@@ -49,21 +49,20 @@
         <!-- <li>
                 Sublinear Time Quantum Sensitivity Sampling (To appear).
                 <br> Zhao Song, David P. Woodruff and <i>Lichen Zhang</i>.
-                <br> NeurIPS, 2025.
+                <br> ICLR, 2026.
                 </pre>
             </li>
         -->
-        <!-- <li>
+        <li>
                 Differential Privacy for Euclidean Jordan Algebra with Applications to Private Symmetric Cone Programming (To appear).
                 <br> Zhao Song, Jianfei Xue and <i>Lichen Zhang</i>.
                 <br> NeurIPS, 2025.
                 </pre>
             </li>
-        -->
         <!-- <li>
                 Streaming Semidefinite Programs: O(\sqrt{n}) Passes, Small Space and Fast Runtime (To appear).
                 <br> Xiaoyu Li, Zhao Song and <i>Lichen Zhang</i>.
-                <br> NeurIPS, 2025.
+                <br> .
             </li> -->
         <li> 
             On Differential Privacy for Adaptively Solving Search Problems via Sketching (<a href = "https://arxiv.org/abs/2506.05503">arxiv link</a>). 
