--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             </li>
         -->
         <li>
-                Differential Privacy for Euclidean Jordan Algebra with Applications to Private Symmetric Cone Programming (To appear).
+            Differential Privacy for Euclidean Jordan Algebra with Applications to Private Symmetric Cone Programming (<a href = "https://arxiv.org/abs/2509.16915">arxiv link</a>).
                 <br> Zhao Song, Jianfei Xue and <i>Lichen Zhang</i>.
                 <br> NeurIPS, 2025.
                 </pre>
@@ -62,7 +62,7 @@
         <!-- <li>
                 Streaming Semidefinite Programs: O(\sqrt{n}) Passes, Small Space and Fast Runtime (To appear).
                 <br> Xiaoyu Li, Zhao Song and <i>Lichen Zhang</i>.
-                <br> .
+                <br> AISTATS, 2026.
             </li> -->
         <li> 
             On Differential Privacy for Adaptively Solving Search Problems via Sketching (<a href = "https://arxiv.org/abs/2506.05503">arxiv link</a>). 
@@ -162,6 +162,11 @@
 		</ul>
         <h2> Manuscripts </h2>
         <ul>
+        <li>
+            Sublinear Time Quantum Sensitivity Sampling (<a href = "https://arxiv.org/abs/2509.16801">arxiv link</a>).
+                <br> Zhao Song, David P. Woodruff and <i>Lichen Zhang</i>.
+                </pre>
+            </li>
             <li>
                 Faster Algorithm for One-Sided Kadison-Singer via Furthest-Neighbor Search (<a href = "sxz21.pdf">pdf</a>).
                 <br> Zhao Song, Zhaozhuo Xu and <i>Lichen Zhang</i>.
