--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 		<h2> Publications (Author names in alphabetical order) </h2>
 		<ul>
         <!-- <li>
-                Sublinear Time Quantum Sensitivity Sampling (To appear).
+                Sublinear Time Quantum Sensitivity Sampling (<a href = "https://arxiv.org/abs/2509.16801">arxiv link</a>).
                 <br> Zhao Song, David P. Woodruff and <i>Lichen Zhang</i>.
                 <br> ICLR, 2026.
                 </pre>
