--- a/index.html
+++ b/index.html
@@ -47,6 +47,17 @@
 		<h2> Publications (Author names in alphabetical order) </h2>
 		<ul>
         <!-- <li>
+                Streaming Semidefinite Programs: O(\sqrt{n}) Passes, Small Space and Fast Runtime (To appear).
+                <br> Xiaoyu Li, Zhao Song and <i>Lichen Zhang</i>.
+                <br> AISTATS, 2026.
+            </li> -->
+        <!-- <li>
+                Sublinear Time Quantum Algorithm for Attention Approximation (To appear).
+                <br> Zhao Song, Jianfei Xue, Jiahao Zhang and <i>Lichen Zhang</i>.
+                <br> ICLR, 2026.
+            </li>
+        -->
+        <!-- <li>
                 Sublinear Time Quantum Sensitivity Sampling (<a href = "https://arxiv.org/abs/2509.16801">arxiv link</a>).
                 <br> Zhao Song, David P. Woodruff and <i>Lichen Zhang</i>.
                 <br> ICLR, 2026.
@@ -59,11 +70,6 @@
                 <br> NeurIPS, 2025.
                 </pre>
             </li>
-        <!-- <li>
-                Streaming Semidefinite Programs: O(\sqrt{n}) Passes, Small Space and Fast Runtime (To appear).
-                <br> Xiaoyu Li, Zhao Song and <i>Lichen Zhang</i>.
-                <br> AISTATS, 2026.
-            </li> -->
         <li> 
             On Differential Privacy for Adaptively Solving Search Problems via Sketching (<a href = "https://arxiv.org/abs/2506.05503">arxiv link</a>). 
             <br> Shiyuan Feng, Ying Feng, George Z. Li, Zhao Song, David P. Woodruff and <i>Lichen Zhang</i>.
@@ -162,6 +168,11 @@
 		</ul>
         <h2> Manuscripts </h2>
         <ul>
+        <li>
+            Graph-based Nearest Neighbors with Dynamic Updates via Random Walks (<a href = "https://arxiv.org/abs/2512.18060">arxiv link</a>).
+            <br> Nina Mishra, Yonatan Naamad, Tal Wagner and <i>Lichen Zhang</i>.
+            </pre>
+        </li>
         <li>
             Sublinear Time Quantum Sensitivity Sampling (<a href = "https://arxiv.org/abs/2509.16801">arxiv link</a>).
                 <br> Zhao Song, David P. Woodruff and <i>Lichen Zhang</i>.
