--- a/index.html
+++ b/index.html
@@ -49,21 +49,27 @@
         <!-- <li>
                 Streaming Semidefinite Programs: O(\sqrt{n}) Passes, Small Space and Fast Runtime (To appear).
                 <br> Xiaoyu Li, Zhao Song and <i>Lichen Zhang</i>.
-                <br> AISTATS, 2026.
+                <br> ICML, 2026.
             </li> -->
-        <!-- <li>
-                Sublinear Time Quantum Algorithm for Attention Approximation (To appear).
-                <br> Zhao Song, Jianfei Xue, Jiahao Zhang and <i>Lichen Zhang</i>.
-                <br> ICLR, 2026.
-            </li>
-        -->
         <!-- <li>
                 Sublinear Time Quantum Sensitivity Sampling (<a href = "https://arxiv.org/abs/2509.16801">arxiv link</a>).
                 <br> Zhao Song, David P. Woodruff and <i>Lichen Zhang</i>.
-                <br> ICLR, 2026.
+                <br> ICML, 2026.
                 </pre>
             </li>
         -->
+        <li>
+            Graph-based Nearest Neighbors with Dynamic Updates via Random Walks (<a href = "https://arxiv.org/abs/2512.18060">arxiv link</a>).
+            <br> Nina Mishra, Yonatan Naamad, Tal Wagner and <i>Lichen Zhang</i>.
+            <br> ICLR, 2026.
+            </pre>
+        </li>
+        <li>
+                Sublinear Time Quantum Algorithm for Attention Approximation (To appear).
+                <br> Zhao Song, Jianfei Xue, Jiahao Zhang and <i>Lichen Zhang</i>.
+                <br> ICLR, 2026.
+                </pre>
+            </li>
         <li>
             Differential Privacy for Euclidean Jordan Algebra with Applications to Private Symmetric Cone Programming (<a href = "https://arxiv.org/abs/2509.16915">arxiv link</a>).
                 <br> Zhao Song, Jianfei Xue and <i>Lichen Zhang</i>.
@@ -168,11 +174,6 @@
 		</ul>
         <h2> Manuscripts </h2>
         <ul>
-        <li>
-            Graph-based Nearest Neighbors with Dynamic Updates via Random Walks (<a href = "https://arxiv.org/abs/2512.18060">arxiv link</a>).
-            <br> Nina Mishra, Yonatan Naamad, Tal Wagner and <i>Lichen Zhang</i>.
-            </pre>
-        </li>
         <li>
             Sublinear Time Quantum Sensitivity Sampling (<a href = "https://arxiv.org/abs/2509.16801">arxiv link</a>).
                 <br> Zhao Song, David P. Woodruff and <i>Lichen Zhang</i>.
