--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             </pre>
         </li>
         <li>
-                Sublinear Time Quantum Algorithm for Attention Approximation (To appear).
+            Sublinear Time Quantum Algorithm for Attention Approximation (<a href = "https://arxiv.org/abs/2602.00874">arxiv link</a>).
                 <br> Zhao Song, Jianfei Xue, Jiahao Zhang and <i>Lichen Zhang</i>.
                 <br> ICLR, 2026.
                 </pre>
